# huffman-crypto

./: .gitignore  CMakeLists.txt  README.md  main.c  probs_btree.txt  probs_hfm.txt
b-tree/: b-tree.c  b-tree.h  encoding.c  encoding.h  encrypt.c  encrypt.h  list.c  list.h
common/: common.h
huffman-tree/: huffman-tree.c  huffman-tree.h  minheap.c  minheap.h  structs.h
utils/: cmd.c  cmd.h
